[package]
name = 'airdash_id'
version = '0.1.1'
edition = '2021'
license = 'MIT'

[dependencies]
proc-bitfield = '0.3.0'
time = { version = "0.3.28", features = ["macros"] }
serde = { version = "1", optional = true }
ts-rs = { version = "7.0.0", optional = true }

[features]
default = ["serde", "ts_rs"]
bench = []
serde = ["dep:serde"]
ts_rs = ["dep:ts-rs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# disabled so it doesnt get included in dependents
# [dev-dependencies]
# criterion = '0.3'

[[bench]]
name = 'snowflake_bench'
harness = false
