[package]
name = 'snowflake'
version = '0.2.0'
edition = '2021'
license = 'MIT'

[dependencies]
serde = { version = "1", optional = true }
serde-aux = "4.6.0"
chrono = "^0.4"

[dependencies.specta]
version = "=2.0.0-rc.22"
features = ["derive", "export"]
git = "https://github.com/specta-rs/specta.git"
branch = "main"

[features]
default = ["serde"]
bench = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# disabled so it doesnt get included in dependents
# [dev-dependencies]
# criterion = '0.3'

[[bench]]
name = 'snowflake_bench'
harness = false
